--- a/demo/index.html
+++ b/demo/index.html
@@ -15,11 +15,11 @@
     import { html, render } from 'lit-html';
     import '../product-offering.js';
 
-    const title = 'Hello owc World!';
+    
     render(
       html`
-        <product-offering .title=${title}>
-          some more light-dom
+        <product-offering>
+         
         </product-offering>
       `,
       document.querySelector('#demo')
