--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,8 @@
     import { html, render } from 'lit-html';
     import '../product-offering.js';
 
+    // const image = new Image();
+    // this.image.src = "../assets/Images/placeholder1.jpeg";
     const title = ["Real-world Projects from industry experts", "Techincal mentor support", "Career services" , "Flexible learning program"];
     const description = ["With real world projects and immersive content built in partnership with top tier companies, you’ll master the tech skills companies want.", 
       "Our knowledgeable mentors guide your learning and are focused on answering your questions, motivating you and keeping you on track.", 
@@ -22,7 +24,7 @@
       "Get a custom learning plan tailored to fit your busy life. Learn at your own pace and reach your personal goals on the schedule that works best for you."];
     render(
       html`
-        <product-offering .title=${title} .description=${description}>
+        <product-offering .title=${title} .description=${description} >
          
         </product-offering>
       `,
