--- a/demo/index.html
+++ b/demo/index.html
@@ -26,20 +26,41 @@
     </script>
 </head>
 <body>
-
- 
-
   <div id="grid-container">
-    <product-offering source="../assets/Images/placeholder1.jpeg" title="Real-world projects from industry experts" icon = "star" description="With real world projects and immersive content built in partnership with top tier companies, you’ll master the tech skills companies want.">
+    <product-offering 
+      source="../assets/Images/placeholder1.jpeg" 
+      title="Real-world projects from industry experts" 
+      accentColor = "purple"
+      description="With real world projects and immersive content built in partnership with top tier companies, you’ll master the tech skills companies want."
+    >
       <div slot="description">With real world projects and immersive content built in partnership with top tier companies, you’ll master the tech skills companies want.</div>
     </product-offering>
-    <product-offering source="../assets/Images/placeholder2.jpeg" title="Technical mentor support" icon = "star" description="With real world projects and immersive content built in partnership with top tier companies, you’ll master the tech skills companies want.">
+
+    <product-offering 
+      source="../assets/Images/placeholder2.jpeg" 
+      title="Technical mentor support" 
+      icon = "star" 
+      description="With real world projects and immersive content built in partnership with top tier companies, you’ll master the tech skills companies want."
+    >
       <div slot="description">Our knowledgeable mentors guide your learning and are focused on answering your questions, motivating you and keeping you on track.</div>
     </product-offering>
-    <product-offering source="../assets/Images/placeholder3.jpeg" title="Career services" icon = "icons:check" description="With real world projects and immersive content built in partnership with top tier companies, you’ll master the tech skills companies want.">
+
+    <product-offering 
+      source="../assets/Images/placeholder3.jpeg" 
+      title="Career services" 
+      icon = "icons:check" 
+      description="With real world projects and immersive content built in partnership with top tier companies, you’ll master the tech skills companies want."
+    >
       <div slot="description">You’ll have access to resume support, Github portfolio review and LinkedIn profile optimization to help you advance your career and land a high-paying role.</div>
     </product-offering>
-    <product-offering source="../assets/Images/placeholder4.jpeg" title="Flexible learning program" icon = "icons:search"  description="With real world projects and immersive content built in partnership with top tier companies, you’ll master the tech skills companies want.">
+
+    <product-offering 
+      source="../assets/Images/placeholder4.jpeg" 
+      accentColor = "red" 
+      title="Flexible learning program" 
+      icon = "icons:search"  
+      description="With real world projects and immersive content built in partnership with top tier companies, you’ll master the tech skills companies want."
+    >
       <div slot="description">Get a custom learning plan tailored to fit your busy life. Learn at your own pace and reach your personal goals on the schedule that works best for you.</div>
     </product-offering>
 </div>
